@@ -1,4 +1,4 @@
-SUBDIRS = libl4 libhurd-ihash libhurd-slab libhurd-cap \
+SUBDIRS = libl4 libhurd-ihash libhurd-slab libhurd-cap libhurd-cap-server \
 	libpthread \
 	libc-parts laden wortel physmem \
 	doc
